--- a/.github/workflows/incloud.yaml
+++ b/.github/workflows/incloud.yaml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Running Nuclei for vulnerability assessment
         run: |
-          nuclei -t -severity critical,medium -l output/active_urls.txt -bs 100 -c 50 -rl 300 -nc | tee output/nuclei_output.txt
+          nuclei -severity critical,medium -l output/active_urls.txt -bs 100 -c 50 -rl 300 -nc | tee output/nuclei_output.txt
         shell: bash
 
       - name: Sorting the output results
