--- a/.github/workflows/incloud.yaml
+++ b/.github/workflows/incloud.yaml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Running Nuclei for vulnerability assessment
         run: |
-          nuclei -t /home/runner/nuclei-templates -severity critical,medium -l output/active_urls.txt -bs 100 -c 50 -rl 300 -nc | tee output/nuclei_output.txt
+          nuclei -t "/home/runner/nuclei-templates/*.yaml" -l output/active_urls.txt -bs 100 -c 50 -rl 300 -nc | tee output/nuclei_output.txt
         shell: bash
 
       - name: Sorting the output results
