--- a/.github/workflows/incloud.yaml
+++ b/.github/workflows/incloud.yaml
@@ -1,79 +1,47 @@
-name: incloud
+# This is a basic workflow to help you get started with Actions
 
+name: CI
+
+# Controls when the workflow will run
 on:
-    workflow_dispatch:
+  # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@master
+      
+      - uses: actions/checkout@v2
 
-      - name: Setup golang
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.14
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
 
-      - name: Setup Dependencies
-        run: sudo apt-get install libpcap-dev 
-           
-        
-
-      - name: Cache Go
-        id: cache-go
-        uses: actions/cache@v2
-        with:
-          path: /home/runner/go
-          key: ${{ runner.os }}-go
-
-      - name: Setting up ProjectDiscovery tools
-        env:
-          GO111MODULE: on
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
         run: |
-          go get -v github.com/projectdiscovery/httpx/cmd/httpx
-          go get -v github.com/projectdiscovery/nuclei/v2/cmd/nuclei
-        shell: bash
+          echo Add other actions to build,
+          echo test, and deploy your project.
+      
 
-      - name: Running httpx for HTTP webservers probbing
+     
+      - name: Run a python script
         run: |
-          httpx -l input/domains.txt -title
-          httpx -l input/domains.txt | tee output/active_urls.txt
-          curl ipinfo.io
-        shell: bash
-
-      - name: Downloading Nuclei Templates
+          python2 -V
+      
+      - name: apt install pip2
         run: |
-          nuclei -update-templates
-        shell: bash
-        
-      - name: where Nuclei Templates
-        run: |
-          pwd
-        shell: bash
-
-
-      - name: Running Nuclei for vulnerability assessment
-        run: |
-          nuclei -t /home/runner/nuclei-templates/ -l output/active_urls.txt -bs 100 -c 50 -rl 300 -nc | tee output/nuclei_output.txt
-        shell: bash
-
-      - name: Sorting the output results
-        run: |
-          find output -type f -exec sort {} -o {} \;
-        shell: bash
-
-      - name: Create local changes
-        run: |
-          git add output/active_urls.txt
-          git add output/nuclei_output.txt
-      - name: Commit results to Github
-        run: |
-          git config --local user.email "pa_jiankang@qq.com"
-          git config --global user.name "pinganjiankang"
-          git commit -m "InCloud Report" -a --allow-empty
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+          sudo apt install python2-pip -y 
+          
