--- a/.github/workflows/incloud.yaml
+++ b/.github/workflows/incloud.yaml
@@ -43,7 +43,7 @@ jobs:
       
      # - name: apt install pip2
      #   run: |
-     #     sudo pip2.7 install -r requirements.txt
+     #     sudo pip2.7 install -r BBScan/requirements.txt
           
       - name: run BBscan
         run: |
