--- a/.github/workflows/incloud.yaml
+++ b/.github/workflows/incloud.yaml
@@ -50,7 +50,7 @@ jobs:
           git clone https://github.com/lijiejie/BBScan.git
           pwd
           ls
-          sudo pip install -r requirements.txt
+          sudo pip install -r BBScan/requirements.txt
           python2 BBScan/BBScan.py -f input/domains.txt
           cat BBScan/report/*.html
           
